[package]
name = "benediction-ritual"
version = "1.0.0"
authors = ["stscoundrel / Sampo Silvennoinen"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stscoundrel/benediction-ritual"
description = """
A ritual to generate test data to Benediction.
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures = "0.3.4"